____________________________________________

Zelda XD2: Mercuris Chess 1.0.1 (in progress)
____________________________________________

* Fix duplicated menus after game-over (#2).
* Make karts hurt the hero and react to bananas (#36).
* Fix camera jumping in the freaking cave (#1).
* Fix typos.
* Move the piece of heart from the forest to the freaking cave (#40).
* Various minor improvements.

____________________________________________

Zelda XD2: Mercuris Chess 1.0.0 (2017-04-01)
____________________________________________

* Initial release.
